add data explore and fix schema

--- a/config/server.properties
+++ b/config/server.properties
@@ -22,7 +22,7 @@ broker.id=0
 ############################# Socket Server Settings #############################
 
 # The port the socket server listens on
-port=<YOUR PORT NUMBER>
+port=9092
 
 # Hostname the broker will bind to. If not set, the server will bind to all interfaces
 #host.name=localhost
